--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ sourceCompatibility = 1.8
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Ex-Cache',
+        attributes 'Implementation-Title': 'ExCache',
                    'Implementation-Version': version
     }
 }
@@ -18,8 +18,6 @@ repositories {
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile 'com.google.guava:guava:18.0'
-    compile 'com.datastax.cassandra:cassandra-driver-core:2.1.4'
-    compile 'org.springframework.data:spring-data-cassandra:1.2.0.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
