--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,7 +6,7 @@ sourceCompatibility = 1.8
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Exceliant-Cache-Core',
+        attributes 'Implementation-Title': 'Excelian-Cache-Core',
                    'Implementation-Version': version
     }
 }
