--- a/cassandra-ns/build.gradle
+++ b/cassandra-ns/build.gradle
@@ -6,7 +6,7 @@ sourceCompatibility = 1.8
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Ex-Cache-Cassandra',
+        attributes 'Implementation-Title': 'Cache-Cassandra',
                    'Implementation-Version': version
     }
 }
